--- a/playlist-app/src/App.css
+++ b/playlist-app/src/App.css
@@ -1,3 +1,14 @@
 .login-button {
     background-color: #1db954;
+    color: azure;
+}
+
+.login-img {
+    font-size: 250px;
+    color: #1db954;
+}
+
+.login-header {
+    font-size: 75px;
+    color: azure;
 }
