--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,33 +1,46 @@
-.App {
-  text-align: center;
+.login-button {
+    background-color: #1db954;
+    color: black;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.login-img {
+    font-size: 250px;
+    color: #1db954;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.login-header {
+    font-size: 75px;
+    color: azure;
 }
 
-.App-link {
-  color: #61dafb;
+.playlist-header {
+    font-size: 75px;
+    color: azure;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.p-table {
+    background-color: cadetblue;
+}
+
+.table-sub {
+    background-color: #1db954;
+}
+
+.playlist-button {
+    color: azure;
+}
+
+.song-list-item {
+    color: azure;
+}
+
+.rating-text {
+    color: azure;
+    font-size: 25px;
+}
+
+.add-button {
+    font-size: 35px;
+    background-color: #1db954;
+    color: black;
 }
