Adds variable ratings

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,7 +39,7 @@
     font-size: 25px;
 }
 
-.add-button {
+.table-button {
     font-size: 35px;
     background-color: #1db954;
     color: black;
