--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,8 @@
 body {
-  background: darkslategrey;
+  background: #135058;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #3f2b96, #135058);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #3f2b96, #135058); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
